# BI-BEZ

./: .gitignore  CMakeLists.txt  README.md
homework/lab-2/: task2.cpp
homework/lab-3/input/: .gitignore
homeworks/lab-2/: ukol-1.c  ukol-2.c
homeworks/lab-3/: README.md  task.cpp
